--- a/war/src/main/webapp/WEB-INF/web.xml
+++ b/war/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,14 @@
             <param-value>weblogic1</param-value>
         </init-param>
         <init-param>
+            <param-name>processdefs</param-name>
+            <param-value>oracleinternalpcs~KtbAlterSuspend!1.0~KtbAlterSuspendProcess,def</param-value>
+        </init-param>
+        <init-param>
+            <param-name>whitelist</param-name>
+            <param-value>/process-definitions,/webforms,/processes</param-value>
+        </init-param>
+        <init-param>
             <param-name>log</param-name>
             <param-value>true</param-value>
         </init-param>
