--- a/war/pom.xml
+++ b/war/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>servlet</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.thetransactioncompany</groupId>
+            <artifactId>cors-filter</artifactId>
+            <version>2.6</version>
+        </dependency>
     </dependencies>
 </project>
 
