--- a/war/src/main/webapp/WEB-INF/web.xml
+++ b/war/src/main/webapp/WEB-INF/web.xml
@@ -5,24 +5,35 @@
 
     <description>pcs proxy servlet</description>
 
+    <filter>
+        <filter-name>CORS</filter-name>
+        <filter-class>com.thetransactioncompany.cors.CORSFilter</filter-class>
+    </filter>
+    <filter-mapping>
+            <filter-name>CORS</filter-name>
+            <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <servlet>
         <servlet-name>proxy1</servlet-name>
         <servlet-class>oracle.oic.proxy.PCSProxy</servlet-class>
         <init-param>
             <param-name>targetUri</param-name>
-            <param-value>http://localhost:7001</param-value>
+            <param-value>https://slc14rqt.us.oracle.com:7004</param-value>
+            <!-- <param-value>http://localhost:7001</param-value> -->
         </init-param>
         <init-param>
             <param-name>user</param-name>
-            <param-value>weblogic</param-value>
+            <param-value>thomas.albrecht@oracle.com</param-value>
+            <!-- <param-value>weblogic</param-value> -->
         </init-param>
         <init-param>
             <param-name>password</param-name>
-            <param-value>weblogic1</param-value>
+            <param-value>HanSolo1</param-value>
+            <!-- <param-value>weblogic1</param-value> -->
         </init-param>
         <init-param>
             <param-name>processdefs</param-name>
-            <param-value>oracleinternalpcs~KtbAlterSuspend!1.0~KtbAlterSuspendProcess,def</param-value>
+            <param-value>oracleinternalpcs~Basic_Form_Approval!1.0~FormApprovalProcess,def</param-value>
         </init-param>
         <init-param>
             <param-name>whitelist</param-name>
