reverted inlining html, reintroduced cors filter only for /css/* and /js/*

--- a/war/src/main/webapp/WEB-INF/web.xml
+++ b/war/src/main/webapp/WEB-INF/web.xml
@@ -5,14 +5,15 @@
 
     <description>pcs proxy servlet</description>
 
-    <!--<filter>
+    <filter>
         <filter-name>CORS</filter-name>
         <filter-class>com.thetransactioncompany.cors.CORSFilter</filter-class>
     </filter>
     <filter-mapping>
             <filter-name>CORS</filter-name>
-            <url-pattern>/proxy/*</url-pattern>
-    </filter-mapping>-->
+            <url-pattern>/js/*</url-pattern>
+            <url-pattern>/css/*</url-pattern>
+    </filter-mapping>
     <servlet>
         <servlet-name>proxy1</servlet-name>
         <servlet-class>oracle.oic.proxy.PCSProxy</servlet-class>
